--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>College Project Website</title>
+    <title>Game Website Efootball</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -10,7 +10,7 @@
 <header>
     <div class="logo">
         <img src="logo.png" alt="Logo">
-        <h3>My Project</h3>
+        <h3>Efootball</h3>
     </div>
 
     <nav>
@@ -22,7 +22,7 @@
 </header>
 
 <section id="home">
-    <h1>Welcome to My College Project</h1>
+    <h1>Welcome to Efootball </h1>
     <p>
         This website is created as a part of my college presentation.
         It is built using HTML and CSS to demonstrate basic web
