--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <header>
     <div class="logo">
-        <img src="logo.png" alt="Logo">
+        <img src="https://commons.wikimedia.org/wiki/File:EFootball_2022_logo_colored.svg" alt="Logo">
         <h3>Efootball</h3>
     </div>
 
