Update logo and header structure in index.html

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 
 <header>
     <div class="logo">
-        <img src="https://commons.wikimedia.org/wiki/File:EFootball_2022_logo_colored.svg" alt="Logo">
-        <h3>Efootball</h3>
+        <a href="#home">
+            <img src="logo.png" alt="Logo">
+            <h3>Efootball</h3>
+        </a>
     </div>
 
     <nav>
@@ -20,6 +22,7 @@
         <a href="#contact">Contact</a>
     </nav>
 </header>
+
 
 <section id="home">
     <h1>Welcome to Efootball </h1>
