Update logo and project name in header

--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
 
 <header>
     <div class="logo">
-        <a href="#home">
-            <img src="logo.png" alt="Logo">
-            <h3>Efootball</h3>
-        </a>
+        <img src="logo.png" alt="Logo">
+        <h3>My Project</h3>
     </div>
 
     <nav>
