--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <header>
     <div class="logo">
         <img src="logo.png" alt="Logo">
-        <h3>My Project</h3>
+        <h3>EFootball</h3>
     </div>
 
     <nav>
