--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Game Website Efootball</title>
+    <title>Efootball | Website </title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header>
     <div class="logo">
-        <img src="logo.png" alt="Logo">
-        <h3>EFootball</h3>
+        <a href="#home">
+            <img src="logo.png" alt="Logo">
+            <h3>Efootball</h3>
+        </a>
     </div>
 
     <nav>
@@ -21,9 +23,8 @@
     </nav>
 </header>
 
-
 <section id="home">
-    <h1>Welcome to Efootball </h1>
+    <h1>Welcome to My College Project</h1>
     <p>
         This website is created as a part of my college presentation.
         It is built using HTML and CSS to demonstrate basic web
@@ -67,7 +68,7 @@
 </section>
 
 <footer>
-    © 2026 | College Web Project
+    © 2026 | Efootball College Web Project
 </footer>
 
 </body>
