--- a/index.html
+++ b/index.html
@@ -2,37 +2,82 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Efootball | Website </title>
+    <title>Efootball Project</title>
+    <!-- External CSS file -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+<!-- Header Section -->
 <header>
     <div class="logo">
         <a href="#home">
-            <img src="logo.png" alt="Logo">
+            <img src="logo.png" alt="Efootball Logo">
             <h3>Efootball</h3>
         </a>
     </div>
 
     <nav>
         <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#work">Work</a>
+        <a href="#introduction">Introduction</a>
+        <a href="#information">Information</a>
+        <a href="#timeline">Timeline</a>
+        <a href="#showcase">Showcase</a>
         <a href="#contact">Contact</a>
     </nav>
 </header>
 
+<!-- Home Page -->
 <section id="home">
-    <h1>Welcome to My College Project</h1>
+    <h1>Welcome to Efootball</h1>
     <p>
-        This website is created as a part of my college presentation.
-        It is built using HTML and CSS to demonstrate basic web
-        development skills.
+        This website is created as a part of my college project.
+        It is developed using HTML and CSS by referring learning
+        material from W3Schools.
+    </p>
+</section>
+
+<!-- Introduction -->
+<section id="introduction">
+    <h1>Introduction</h1>
+    <p>
+        eFootball is a football simulation video game developed by Konami.
+        It is the modern version of the popular Pro Evolution Soccer (PES)
+        series and focuses on realistic football gameplay.
+    </p>
+</section>
+
+<!-- Information -->
+<section id="information">
+    <h1>Game Information</h1>
+    <p>
+        <b>Game Name:</b> eFootball <br><br>
+        <b>Developer:</b> Konami <br><br>
+        <b>Genre:</b> Sports (Football Simulation) <br><br>
+        <b>Available On:</b> PC, PlayStation, Xbox and Mobile
+    </p>
+</section>
+
+<!-- Timeline -->
+<section id="timeline">
+    <h1>Timeline and Evolution of the Game</h1>
+    <p>
+        The game series started as Pro Evolution Soccer (PES).
+        Over the years, many versions were released with improved
+        graphics and gameplay. In 2021, Konami renamed PES to eFootball
+        and introduced a free-to-play model.
+    </p>
+</section>
+
+<!-- Video and Images -->
+<section id="showcase">
+    <h1>Video and Images of Game for Showcase</h1>
+    <p>
+        The video below shows a short gameplay preview of eFootball.
+        It demonstrates the graphics, player movements and match environment.
     </p>
 
     <div class="video-box">
-        <h2>Project Video Preview</h2>
         <video controls>
             <source src="preview.mp4" type="video/mp4">
             Your browser does not support the video tag.
@@ -40,35 +85,25 @@
     </div>
 </section>
 
-<section id="about">
-    <h1>About This Project</h1>
-    <p>
-        The purpose of this project is to understand the structure
-        and design of a website. No frameworks are used, only
-        basic HTML and CSS.
-    </p>
-</section>
-
-<section id="work">
-    <h1>My Work</h1>
-    <p>
-        This project includes a navigation bar, multiple sections,
-        video preview, and a clean layout. The design focuses on
-        simplicity and readability.
-    </p>
-</section>
-
+<!-- Contact -->
 <section id="contact">
-    <h1>Contact Information</h1>
+    <h1>Contact</h1>
     <p>
         Name: Your Name <br><br>
-        Course: Your Course <br><br>
+        Course: Your Course Name <br><br>
         College: Your College Name
     </p>
 </section>
 
+<!-- Footer -->
 <footer>
-    © 2026 | Efootball College Web Project
+    <p>
+        Conclusion: This project website is created only for academic
+        purposes using HTML and CSS.
+    </p>
+    <p>
+        © 2026 eFootball | All rights belong to Konami
+    </p>
 </footer>
 
 </body>
