Refactor index.html for clarity and conciseness
Removed unnecessary comments and improved text clarity.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Efootball Project</title>
-    <!-- External CSS file -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<!-- Header Section -->
 <header>
     <div class="logo">
         <a href="#home">
@@ -27,7 +25,6 @@
     </nav>
 </header>
 
-<!-- Home Page -->
 <section id="home">
     <h1>Welcome to Efootball</h1>
     <p>
@@ -37,44 +34,39 @@
     </p>
 </section>
 
-<!-- Introduction -->
 <section id="introduction">
     <h1>Introduction</h1>
     <p>
         eFootball is a football simulation video game developed by Konami.
-        It is the modern version of the popular Pro Evolution Soccer (PES)
-        series and focuses on realistic football gameplay.
+        It is the modern version of the Pro Evolution Soccer (PES) series
+        and focuses on realistic football gameplay.
     </p>
 </section>
 
-<!-- Information -->
 <section id="information">
     <h1>Game Information</h1>
     <p>
-        <b>Game Name:</b> eFootball <br><br>
-        <b>Developer:</b> Konami <br><br>
-        <b>Genre:</b> Sports (Football Simulation) <br><br>
-        <b>Available On:</b> PC, PlayStation, Xbox and Mobile
+        Game Name: eFootball <br><br>
+        Developer: Konami <br><br>
+        Genre: Sports (Football Simulation) <br><br>
+        Platforms: PC, PlayStation, Xbox, Mobile
     </p>
 </section>
 
-<!-- Timeline -->
 <section id="timeline">
     <h1>Timeline and Evolution of the Game</h1>
     <p>
-        The game series started as Pro Evolution Soccer (PES).
-        Over the years, many versions were released with improved
-        graphics and gameplay. In 2021, Konami renamed PES to eFootball
-        and introduced a free-to-play model.
+        The football game series started as Pro Evolution Soccer (PES).
+        Over the years, many versions were released with improved gameplay
+        and graphics. In 2021, the game was renamed as eFootball.
     </p>
 </section>
 
-<!-- Video and Images -->
 <section id="showcase">
     <h1>Video and Images of Game for Showcase</h1>
     <p>
-        The video below shows a short gameplay preview of eFootball.
-        It demonstrates the graphics, player movements and match environment.
+        Below is a short gameplay preview of eFootball which shows
+        graphics, player movement and match environment.
     </p>
 
     <div class="video-box">
@@ -85,7 +77,6 @@
     </div>
 </section>
 
-<!-- Contact -->
 <section id="contact">
     <h1>Contact</h1>
     <p>
@@ -95,11 +86,9 @@
     </p>
 </section>
 
-<!-- Footer -->
 <footer>
     <p>
-        Conclusion: This project website is created only for academic
-        purposes using HTML and CSS.
+        This website is created for academic purposes only.
     </p>
     <p>
         © 2026 eFootball | All rights belong to Konami
