--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Efootball Project</title>
+    <title>Football Legends Project</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -10,8 +10,8 @@
 <header>
     <div class="logo">
         <a href="#home">
-            <img src="logo.png" alt="Efootball Logo">
-            <h3>Efootball</h3>
+            <img src="logo.png" alt="Football Legends Logo">
+            <h3>Football Legends</h3>
         </a>
     </div>
 
@@ -26,7 +26,7 @@
 </header>
 
 <section id="home">
-    <h1>Welcome to Efootball</h1>
+    <h1>Welcome to Football Legends</h1>
     <p>
         This website is created as a part of my college project.
         It is developed using HTML and CSS by referring learning
@@ -37,36 +37,37 @@
 <section id="introduction">
     <h1>Introduction</h1>
     <p>
-        eFootball is a football simulation video game developed by Konami.
-        It is the modern version of the Pro Evolution Soccer (PES) series
-        and focuses on realistic football gameplay.
+        Football Legends is a popular football-based video game that
+        focuses on legendary players and exciting gameplay.
+        The game is known for its simple controls and entertaining
+        football matches.
     </p>
 </section>
 
 <section id="information">
     <h1>Game Information</h1>
     <p>
-        Game Name: eFootball <br><br>
-        Developer: Konami <br><br>
-        Genre: Sports (Football Simulation) <br><br>
-        Platforms: PC, PlayStation, Xbox, Mobile
+        Game Name: Football Legends <br><br>
+        Game Type: Sports / Football <br><br>
+        Mode: Single Player and Multiplayer <br><br>
+        Platform: Web Browser
     </p>
 </section>
 
 <section id="timeline">
     <h1>Timeline and Evolution of the Game</h1>
     <p>
-        The football game series started as Pro Evolution Soccer (PES).
-        Over the years, many versions were released with improved gameplay
-        and graphics. In 2021, the game was renamed as eFootball.
+        Football Legends started as a simple browser-based football game.
+        Over time, new versions were introduced with better graphics,
+        more characters, and improved gameplay mechanics.
     </p>
 </section>
 
 <section id="showcase">
     <h1>Video and Images of Game for Showcase</h1>
     <p>
-        Below is a short gameplay preview of eFootball which shows
-        graphics, player movement and match environment.
+        Below is a short gameplay preview of Football Legends.
+        It shows the characters, football actions, and match environment.
     </p>
 
     <div class="video-box">
@@ -91,7 +92,7 @@
         This website is created for academic purposes only.
     </p>
     <p>
-        © 2026 eFootball | All rights belong to Konami
+        © 2026 Football Legends | Project Work
     </p>
 </footer>
 
