Refactor index.html by removing Introduction section
Removed the Introduction section and updated the Game Information and Timeline sections for clarity.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 
     <nav>
         <a href="#home">Home</a>
-        <a href="#introduction">Introduction</a>
         <a href="#information">Information</a>
         <a href="#timeline">Timeline</a>
         <a href="#showcase">Showcase</a>
@@ -34,32 +33,26 @@
     </p>
 </section>
 
-<section id="introduction">
-    <h1>Introduction</h1>
-    <p>
-        Football Legends is a popular football-based video game that
-        focuses on legendary players and exciting gameplay.
-        The game is known for its simple controls and entertaining
-        football matches.
-    </p>
-</section>
-
 <section id="information">
     <h1>Game Information</h1>
     <p>
-        Game Name: Football Legends <br><br>
-        Game Type: Sports / Football <br><br>
-        Mode: Single Player and Multiplayer <br><br>
-        Platform: Web Browser
+        Football Legends is a popular football-based browser game
+        that focuses on legendary football players and entertaining gameplay.
+        The game is known for its simple controls and fun football matches.
+        <br><br>
+        <b>Game Name:</b> Football Legends <br><br>
+        <b>Game Type:</b> Sports / Football <br><br>
+        <b>Mode:</b> Single Player and Multiplayer <br><br>
+        <b>Platform:</b> Web Browser
     </p>
 </section>
 
 <section id="timeline">
     <h1>Timeline and Evolution of the Game</h1>
     <p>
-        Football Legends started as a simple browser-based football game.
-        Over time, new versions were introduced with better graphics,
-        more characters, and improved gameplay mechanics.
+        Football Legends started as a simple online football game.
+        Over time, new versions were released with better graphics,
+        more characters, and improved gameplay features.
     </p>
 </section>
 
@@ -88,12 +81,8 @@
 </section>
 
 <footer>
-    <p>
-        This website is created for academic purposes only.
-    </p>
-    <p>
-        © 2026 Football Legends | Project Work
-    </p>
+    <p>This website is created for academic purposes only.</p>
+    <p>© 2026 Football Legends | College Project</p>
 </footer>
 
 </body>
