Revise website description and contact information
Updated project description and contact details.

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 <section id="home">
     <h1>Welcome to Football Legends</h1>
     <p>
-        This website is created as a part of my college project.
-        It is developed using HTML and CSS by referring learning
-        material from W3Schools.
+        This is the website i have done for my assignment.
+        It tells about the game website which is football legends.
+        This would include the updations,improvements and timeline detailed well to understand.
     </p>
 </section>
 
@@ -74,14 +74,14 @@
 <section id="contact">
     <h1>Contact</h1>
     <p>
-        Name: Your Name <br><br>
-        Course: Your Course Name <br><br>
-        College: Your College Name
+        Name: Anton Joseph <br><br>
+        Course: IT Level 2 <br><br>
+        College: Suffolk New College
     </p>
 </section>
 
 <footer>
-    <p>This website is created for academic purposes only.</p>
+    <p>Educational purposes use only.</p>
     <p>© 2026 Football Legends | College Project</p>
 </footer>
 
